cloud scrollbar already fixed I hope

--- a/src/style/canvasAnimation.css
+++ b/src/style/canvasAnimation.css
@@ -10,7 +10,7 @@
 
 .canvasAnimation .clouds{
     position: absolute;
-    width: 10vw;
+    width: 100vw;
     height: 150px;
     overflow: hidden;
 }
